# turboprop

./: .flake8  .gitignore  .turboprop.yml  ARCHITECTURE.md  CLAUDE.md  PUBLISHING.md  README.md  advanced_filters.py  alternative_detector.py  automatic_selection_config.py  automatic_tool_selector.py  catalog_validator.py  code_construct_extractor.py  code_index.py  comparison_constants.py  comparison_formatter.py  comparison_metrics.py  comparison_response_types.py  comparison_types.py  config.py  conftest.py  construct_search.py  context_analyzer.py  database_manager.py  decision_support.py  demo_tool_discovery.py  docstring_parser.py  embedding_helper.py  error_handling.py  error_handling_utils.py  example_generator.py  exceptions.py  file_watching.py  format_utils.py  git_integration.py  hybrid_search.py  ide_integration.py  indexing_operations.py  language_detection.py  logging_config.py  (+69 more)
.claude/: turboprop-commands.md
.claude/commands/: tdd.prompt
.mcp/: config.json
docs/: README.md
docs/api/: enhanced_search.md
docs/developer/: architecture.md
docs/migration/: upgrade_guide.md
docs/tool_search/: README.md  api_reference.md  architecture.md  integration_guide.md  migration_guide.md  user_guide.md  validate_documentation.py
docs/tool_search/examples/: advanced_workflows.py  basic_usage.py  custom_integrations.py
docs/tool_search/reference/: data_structures.md  mcp_tools_reference.md  search_algorithms.md
docs/user/: search_guide.md
example-codebases/bashplotlib/: .mcp.json  setup.py
example-codebases/bashplotlib/bashplotlib/: histogram.py  scatterplot.py
example-codebases/bashplotlib/bashplotlib/utils/: helpers.py
example-codebases/poker/: code_index.duckdb.wal
example-codebases/poker/turboprop/: code_index.duckdb.wal
issues/: 000002_step.md  000004_step.md  000005_step.md  000006_step.md  000007_step.md  000008_step.md  000009_step.md  000010_step.md  000011_step.md  000013_step.md  000014_step.md  000015_step.md  000016_step.md  000017_step.md  000018_step.md  000019_step.md  000020_step.md  000021_step.md  000022_step.md  000023_step.md  000024_step.md  000025_step.md  000026_step.md  000027_step.md  000028_step.md  000030_step.md  000031_step.md  000040_step.md  000041_step.md  000042_step.md  000043_step.md
issues/complete/: 000002_step.md  000003_step.md  000004_step.md  000006_step.md  000007_step.md  000008_step.md  000011_step.md  000012_step.md  000017_step.md  000018_step.md  000021_step.md  000022_step.md  000024_step.md  000027_step.md  000029_step.md  000030_step.md  000031_step.md  000035_step.md  000038_step.md  000039_step.md  000040_step.md
migrations/: README.md  rollback_v001.sql
scripts/: build-simple.sh  build.sh  publish.sh  run-unit-tests.sh  test-local.sh
specifications/: better-search-results.md  bugfixes.md  mcp-tool-search.md
tests/: __init__.py  conftest.py  test_automatic_selection.py  test_code_index.py  test_comparison_mcp_tools.py  test_config.py  test_construct_extraction.py  test_construct_search.py  test_context_analyzer.py  test_database_fts.py  test_database_lifecycle.py  test_database_migration.py  test_freshness_check.py  test_fts_edge_cases.py  test_fts_fallback.py  test_fts_performance.py  test_git_integration.py  test_hybrid_search.py  test_hybrid_search_fts.py  test_ide_integration.py  test_language_detection.py  test_mcp_metadata_extraction.py  test_mcp_responses.py  test_mcp_tool_schema.py  test_metadata_extraction.py  test_new_features.py  test_parameter_search.py  test_recommendation_algorithms.py  test_recommendation_explainer.py  test_recommendation_mcp_tools.py  test_recommendation_system_integration.py  test_response_standardization.py  test_result_ranking.py  test_search_result_types.py  test_server.py  test_snippet_extraction.py  test_task_analyzer.py  test_tool_cataloging.py  test_tool_comparison.py  test_tool_discovery.py  (+5 more)
tests/docker/: Dockerfile  README.md  docker-compose.yml  run_tests.sh  test_uvx_mcp.py  validate_mcp.py
tests/docker/test-results/: summary_report.md  test_report.json  validation_report.json
tests/edge_cases/: __init__.py  test_error_handling.py  test_integration_edge_cases.py  test_performance_edge_cases.py  test_search_edge_cases.py
tests/integration/: test_full_workflow.py
tests/performance/: test_search_benchmarks.py
tests/quality/: __init__.py  test_data_accuracy.py
tests/security/: test_input_validation.py
turboprop/: __init__.py  __main__.py  _version.py  advanced_filters.py  alternative_detector.py  apple_silicon_compat.py  automatic_tool_selector.py  catalog_validator.py  code_construct_extractor.py  code_index.py  comparison_constants.py  comparison_formatter.py  comparison_metrics.py  comparison_response_types.py  comparison_types.py  config.py  conftest.py  construct_search.py  context_analyzer.py  database_manager.py  decision_support.py  demo_tool_discovery.py  docstring_parser.py  embedding_helper.py  error_handling.py  error_handling_utils.py  example_generator.py  file_watching.py  format_utils.py  git_integration.py  hybrid_search.py  ide_integration.py  indexing_operations.py  language_detection.py  logging_config.py  mcp_error_handling.py  mcp_metadata_extractor.py  mcp_response_optimizer.py  mcp_response_standardizer.py  mcp_response_types.py  (+59 more)
turboprop/migrations/: rollback_v001.sql
